lib/bait/tests/inout_error/ident/name_from_fun.out
lib/bait/tests/inout_error/ident/name_from_fun.in.bt:3:10 error: undefined identifier foo_fun
