lib/bait/tests/inout_error/ident/name_from_fun.in.bt
fun foo_fun() {}

if foo_fun {}
